--- a/index.html
+++ b/index.html
@@ -20,7 +20,12 @@
       <a href="#">Inventario</a>
       <a href="#">Personal</a>
     </nav>
-    
+    <div class="contenedor">
+        <img src="img/bomberoslafalda.jpg" alt="" class="imagenChiquita">
+
+        <p>Volvercontigo? never</p>
+    </div>
+
     <!-- Aquí va el contenido principal de tu página web -->
 
     <footer>
