--- a/index.html
+++ b/index.html
@@ -26,10 +26,8 @@
         <p>Volvercontigo? never</p>
     </div>
 
-    <!-- Aquí va el contenido principal de tu página web -->
-
     <footer>
-        <p>&copy; 2023 Mi página web. Todos los derechos reservados.</p>
+        <p>&copy; 2023 Proa La Falda. Todos los derechos reservados.</p>
     </footer>
     
   </body>
