--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bomberos La Falda</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <header>
@@ -14,16 +14,17 @@
     </header>
     
     <nav>
-      <a href="#">Inicio</a>
-      <a href="#">Historial de siniestros</a>
-      <a href="#">Ingresar siniestro</a>
+      <a  href="#" style="color: rgb(196, 192, 192)";>Inicio</a>
+      <a href="./html/historialSiniestro.html">Historial de siniestros</a>
+      <a href="./html/ingresarSiniestro.html">Ingresar siniestro</a>
       <a href="#">Inventario</a>
       <a href="#">Personal</a>
     </nav>
     <div class="contenedor">
         <img src="img/bomberoslafalda.jpg" alt="" class="imagenChiquita">
 
-        <p>Volvercontigo? never</p>
+        <p class="lorem-texto-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, dolores non! A, adipisci recusandae laboriosam reiciendis cumque quam architecto delectus doloremque, ipsa beatae praesentium sapiente voluptas doloribus sint similique error!
+        </p>
     </div>
 
     <footer>
