--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <header>
+      <img src="./img/bomberos logo .png" alt="XD">
       <h1>¡Bomberos La Falda!</h1>
       <p>Esta es una aplicación web para la administración de datos.</p>
     </header>
@@ -28,7 +29,8 @@
     </div>
 
     <footer>
-        <p>&copy; 2023 Proa La Falda. Todos los derechos reservados.</p>
+      <img src="./img/bomberos logo .png" alt="XD">
+      <p>&copy; 2023 Proa La Falda. Todos los derechos reservados.</p>
     </footer>
     
   </body>
