--- a/html/historialSiniestro.html
+++ b/html/historialSiniestro.html
@@ -19,9 +19,14 @@
       <a href="../html/ingresarSiniestro.html">Ingresar siniestro</a>
       <a href="./inventario.html">Inventario</a>
       <a href="personal.html">Personal</a>
+      <a href="./login.html">login</a>
     </nav>
     <div class="contenedor">
-    </div>  
+    </div>
+    <footer class="footer-bomberos">
+      <p>Numero de emergencia: 100</p>
+      <p>telefono: +54 03548 42-2631</p>
+    </footer> 
     <footer>
         <p>&copy; 2023 Proa La Falda. Todos los derechos reservados.</p>
     </footer>
