--- a/html/personal.html
+++ b/html/personal.html
@@ -19,12 +19,17 @@
       <a  href="../html/ingresarSiniestro.html">Ingresar siniestro</a>
       <a  href="../html/inventario.html">Inventario</a>
       <a style="color: rgb(196, 192, 192);" href="#">Personal</a>
+      <a href="./login.html">login</a>
     </nav>
     <div class="contenedor">
-    </div>  
+    </div>
+    <footer class="footer-bomberos">
+      <p>Numero de emergencia: 100</p>
+      <p>telefono: +54 03548 42-2631</p>
+    </footer> 
     <footer>
         <p>&copy; 2023 Proa La Falda. Todos los derechos reservados.</p>
     </footer>
     
   </body>
-  </html>
+  </html> 
