--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
       <a  href="#" style="color: rgb(196, 192, 192)";>Inicio</a>
       <a href="./html/historialSiniestro.html">Historial de siniestros</a>
       <a href="./html/ingresarSiniestro.html">Ingresar siniestro</a>
-      <a href="#">Inventario</a>
-      <a href="#">Personal</a>
+      <a href="./html/inventario.html">Inventario</a>
+      <a href="./html/personal.html">Personal</a>
+      <a href="./html/login.html">login</a>
     </nav>
     <div class="contenedor">
         <img src="img/bomberoslafalda.jpg" alt="" class="imagenChiquita">
@@ -26,9 +27,15 @@
         <p class="lorem-texto-info">Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam, dolores non! A, adipisci recusandae laboriosam reiciendis cumque quam architecto delectus doloremque, ipsa beatae praesentium sapiente voluptas doloribus sint similique error!
         </p>
     </div>
+    <footer class="footer-bomberos">
+      <p>Numero de emergencia: 100</p>
+      <p>telefono: +54 03548 42-2631</p>
+
+    </footer>
 
     <footer>
         <p>&copy; 2023 Proa La Falda. Todos los derechos reservados.</p>
+        <p>@escuelasproa.edu.ar</p>
     </footer>
     
   </body>
