--- a/index.html
+++ b/index.html
@@ -6,12 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bomberos La Falda</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="shortcut icon" href="./img/bomberos logo .png" type="image/x-icon">
 </head>
 <body>
-    <header>
-      <img src="./img/bomberos logo .png" alt="XD">
-      <h1>¡Bomberos La Falda!</h1>
-      <p>Esta es una aplicación web para la administración de datos.</p>
+    <header class="header-titulo-img">
+      <div class="div-header-titulo">
+        <h1>¡Bomberos La Falda!</h1>
+        <p>Esta es una aplicación web para la administración de datos.</p>
+      </div>
+      <div class="div-header-img">
+        <img class="img-logo" src="./img/bomberos logo .png" width="100px" alt="XD">
+      </div>  
     </header>
     
     <nav>
