mejorando un poco el footer
trabaja y desarrolle un poco el footer aun le falta lo que envés de texto salga una imagen de facebook o ingstagram

--- a/index.html
+++ b/index.html
@@ -34,9 +34,15 @@
         </p>
     </div>
     <footer class="footer-bomberos">
-      <p>Numero de emergencia: 100</p>
-      <p>telefono: +54 03548 42-2631</p>
-
+      <div>
+        <p>Numero de emergencia: 100</p>
+        <p>telefono: +54 03548 42-2631</p>
+      </div>
+      
+      <div>
+        <a href="https://www.instagram.com/bomberos_lafalda/?hl=es" target="_blank">instagram</a>
+        <a href="https://www.facebook.com/people/Bomberos-Voluntarios-La-Falda/100090244821628/?locale=hi_es" target="_blank">facebook</a>
+      </div>
     </footer>
 
     <footer>
