--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header-titulo-img">
       <div class="div-header-titulo">
-        <h1>¡Bomberos La Falda!</h1>
+        <h1>Bomberos La Falda/h1>
         <p>Esta es una aplicación web para la administración de datos.</p>
       </div>
       <div class="div-header-img">
