--- a/html/inventario.html
+++ b/html/inventario.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bomberos La Falda</title>
     <link rel="stylesheet" href="../css/inventario.css">
+    <link rel="shortcut icon" href="../img/bomberos logo .png" type="image/x-icon">
 </head>
 <body>
     <header>
