--- a/html/login.html
+++ b/html/login.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bomberos La Falda</title>
     <link rel="stylesheet" href="../css/login.css">
+    <link rel="shortcut icon" href="../img/bomberos logo .png" type="image/x-icon">
 </head> 
 <body>
     <header>
       <h1>¡Bomberos La Falda! login</h1>
       <p>Esta es una aplicación web para la administración de datos.</p>
     </header>
-    
+     
     <nav>
       <a href="../index.html">Inicio</a>
       <a  href="#">Historial de siniestros</a>
