--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="header-titulo-img">
       <div class="div-header-titulo">
-        <h1>Bomberos La Falda/h1>
+        <h1>Bomberos La Falda </h1>
         <p>Esta es una aplicación web para la administración de datos.</p>
       </div>
       <div class="div-header-img">
@@ -30,7 +30,7 @@
     <div class="contenedor">
         <img src="img/bomberoslafalda.jpg" alt="" class="imagenChiquita">
 
-        <p class="texto-info">7 DE AGOSTO DE 1969 62 AÑOS AL SERVICIO DE LA COMUNIDAD , LA FALDA- CORDOBA
+        <p class="texto-info"><span> 7 DE AGOSTO DE 1969 62 AÑOS AL SERVICIO DE LA COMUNIDAD , LA FALDA- CORDOBA</span> <br>
           El cuerpo de bomberos de La Falda realiza capacitaciones para voluntarios, en tierra, a la hora de apagar incendios ya sean forestales o estructurales, y en agua capacitaciones para rescates. Estas capacitaciones se emplean en conjunto con otras centrales. También trabajan colaborativamente cunto a otros cuarteles cuando ocurre un siniestro utilizando nuestros equipamientos. Además de esto ayudan a nuestra comunidad local ante alertas meteorológicas.
         </p>
     </div>
