--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 </head>
 <body>
     <header class="header-titulo-img">
-      <div class="div-header-titulo">
-        <h1>Bomberos La Falda </h1>
-        <p>Esta es una aplicación web para la administración de datos.</p>
-      </div>
       <div class="div-header-img">
         <img class="img-logo" src="./img/bomberos logo .png" width="100px" alt="XD">
+      </div>
+      <div class="div-header-titulo">
+        <h1>Bomberos La Falda </h1>
+        <p>Aplicación web para la administración de datos.</p>
       </div>  
     </header>
     
