mejorando acceso del foter

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,9 +39,11 @@
         <p>telefono: +54 03548 42-2631</p>
       </div>
       
-      <div>
-        <a href="https://www.instagram.com/bomberos_lafalda/?hl=es" target="_blank">instagram</a>
-        <a href="https://www.facebook.com/people/Bomberos-Voluntarios-La-Falda/100090244821628/?locale=hi_es" target="_blank">facebook</a>
+      <div> 
+        <section> 
+        <a href="https://www.instagram.com/bomberos_lafalda/?hl=es"  target="_blank"><img class="img-container" src="./img/Instagram.PNG"></a>
+        <a href="https://www.facebook.com/people/Bomberos-Voluntarios-La-Falda/100090244821628/?locale=hi_es"  target="_blank"><img class="img-container" src="./img/facebook.png"></a>
+        </section>
       </div>
     </footer>
 
