--- a/html/historialSiniestro.html
+++ b/html/historialSiniestro.html
@@ -23,6 +23,26 @@
       <a href="./login.html">login</a>
     </nav>
     <div class="contenedor">
+      <table>
+        <tr>
+          <th>Fecha</th>
+          <th>Hora</th>
+          <th>Localidad</th>
+          <th>Sector</th>
+          <th>Dirección</th>
+          <th>Tipo de siniestro</th>
+          <th>Descripción</th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
     </div>
     <footer class="footer-bomberos">
       <p>Numero de emergencia: 100</p>
