Correcciones de Headers

--- a/html/inventario.html
+++ b/html/inventario.html
@@ -9,10 +9,15 @@
     <link rel="shortcut icon" href="../img/bomberos logo .png" type="image/x-icon">
 </head>
 <body>
-    <header>
-      <h1>¡Bomberos La Falda! Inventario</h1>
-      <p>Esta es una aplicación web para la administración de datos.</p>
-    </header>
+  <header class="header-titulo-img">
+    <div class="div-header-img">
+      <img class="img-logo" src="../img/bomberos logo .png" width="100px" alt="XD">
+    </div>
+    <div class="div-header-titulo">
+      <h1>Bomberos La Falda - Inventario </h1>
+      <p>Aplicación web para la administración de datos.</p>
+    </div>  
+  </header>
     
     <nav>
       <a href="../index.html">Inicio</a>
