--- a/html/historialSiniestro.html
+++ b/html/historialSiniestro.html
@@ -9,10 +9,15 @@
     <link rel="shortcut icon" href="../img/bomberos logo .png" type="image/x-icon">
 </head>
 <body>
-    <header>
-      <h1>¡Bomberos La Falda! Historial siniestro</h1>
-      <p>Esta es una aplicación web para la administración de datos.</p>
-    </header>
+  <header class="header-titulo-img">
+    <div class="div-header-img">
+      <img class="img-logo" src="../img/bomberos logo .png" width="100px" alt="XD">
+    </div>
+    <div class="div-header-titulo">
+      <h1>Bomberos La Falda - Historial Siniestro </h1>
+      <p>Aplicación web para la administración de datos.</p>
+    </div>  
+  </header>
     
     <nav>
       <a href="../index.html">Inicio</a>
@@ -23,6 +28,26 @@
       <a href="./login.html">login</a>
     </nav>
     <div class="contenedor">
+      <table>
+        <tr>
+          <th>Fecha</th>
+          <th>Hora</th>
+          <th>Localidad</th>
+          <th>Sector</th>
+          <th>Dirección</th>
+          <th>Tipo de siniestro</th>
+          <th>Descripción</th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
     </div>
     <footer class="footer-bomberos">
       <p>Numero de emergencia: 100</p>
