--- a/html/personal.html
+++ b/html/personal.html
@@ -27,8 +27,26 @@
       <a style="color: rgb(196, 192, 192);" href="#">Personal</a>
       <a href="./login.html">login</a>
     </nav>
+
     <div class="contenedor">
+      <table>
+        <tr>
+          <th>Foto Carnet</th>
+          <th>Nombre y Apellido</th>
+          <th>Rango</th>
+          <th>Estado Actividad</th>
+          <th>Estado Vigencia</th>
+        </tr>
+        <tr>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
     </div>
+
     <footer class="footer-bomberos">
       <p>Numero de emergencia: 100</p>
       <p>telefono: +54 03548 42-2631</p>
