--- a/html/historialSiniestro.html
+++ b/html/historialSiniestro.html
@@ -26,6 +26,7 @@
       <a href="./inventario.html">Inventario</a>
       <a href="personal.html">Personal</a>
       <a href="./login.html">login</a>
+      <a href="../html/tutorial.html">Tutorial</a>
     </nav>
     <div class="contenedor">
       <table>
