--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
       <a href="./html/inventario.html">Inventario</a>
       <a href="./html/personal.html">Personal</a>
       <a href="./html/login.html">login</a>
+      <a href="./html/tutorial.html">Tutorial</a>
     </nav>
     <div class="contenedor">
         <img src="img/bomberoslafalda.jpg" alt="" class="imagenChiquita">
