--- a/html/tutorial.html
+++ b/html/tutorial.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bomberos La Falda</title>
-    <link rel="stylesheet" href="../css/personal.css">
+    <link rel="stylesheet" href="../css/inventario.css">
     <link rel="shortcut icon" href="../img/bomberos logo .png" type="image/x-icon">
 </head>
 <body>
@@ -14,47 +14,29 @@
       <img class="img-logo" src="../img/bomberos logo .png" width="100px" alt="XD">
     </div>
     <div class="div-header-titulo">
-      <h1>Bomberos La Falda - Personal </h1>
+      <h1>Bomberos La Falda - Tutorial </h1>
       <p>Aplicación web para la administración de datos.</p>
     </div>  
   </header>
     
     <nav>
       <a href="../index.html">Inicio</a>
-      <a  href="../html/historialSiniestro.html">Historial de siniestros</a>
-      <a  href="../html/ingresarSiniestro.html">Ingresar siniestro</a>
-      <a  href="../html/inventario.html">Inventario</a>
-      <a style="color: rgb(196, 192, 192);" href="#">Personal</a>
+      <a href="../html/historialSiniestro.html">Historial de siniestros</a>
+      <a href="../html/ingresarSiniestro.html">Ingresar siniestro</a>
+      <a href="../html/inventario.html">Inventario</a>
+      <a href="../html/personal.html">Personal</a>
       <a href="./login.html">login</a>
-      <a href="../html/tutorial.html">Tutorial</a>
+      <a style="color: rgb(196, 192, 192);" href="#">Tutorial</a>
     </nav>
-
     <div class="contenedor">
-      <table>
-        <tr>
-          <th>Foto Carnet</th>
-          <th>Nombre y Apellido</th>
-          <th>Rango</th>
-          <th>Estado Actividad</th>
-          <th>Estado Vigencia</th>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-      </table>
-    </div>
-
+    </div> 
     <footer class="footer-bomberos">
       <p>Numero de emergencia: 100</p>
       <p>telefono: +54 03548 42-2631</p>
-    </footer> 
+    </footer>  
     <footer>
         <p>&copy; 2023 Proa La Falda. Todos los derechos reservados.</p>
     </footer>
     
   </body>
-  </html> 
+  </html>
