--- a/html/historialSiniestro.html
+++ b/html/historialSiniestro.html
@@ -36,16 +36,42 @@
           <th>Sector</th>
           <th>Dirección</th>
           <th>Tipo de siniestro</th>
+          <th>Personal</th>
+          <th>Inventario</th>
           <th>Descripción</th>
         </tr>
         <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
+          <td>23/08/2016</td>
+          <td>14:30</td>
+          <td>Valle Hermoso</td>
+          <td>San Antonio</td>
+          <td>Salesianos 364</td>
+          <td>Incendio</td>
+          <td>Josua Palladini</td>
+          <td>Camión Bomba A</td>
+          <td>Incendio en una residencia</td>
+        </tr>
+        <tr>
+          <td>27/05/2024</td>
+          <td>07:30</td>
+          <td>La Falda</td>
+          <td>El Alto</td>
+          <td>Maipú 380</td>
+          <td>Explosión</td>
+          <td>José Carioca</td>
+          <td>Camión Bomba B</td>
+          <td>En una fiesta con 30 personas explotó una caldera</td> 
+        </tr>
+        <tr>
+          <td>13/10/2021</td>
+          <td>21:00</td>
+          <td>Huerta Grande</td>
+          <td>Panamericano</td>
+          <td>Ruta 38</td>
+          <td>Accidente automovilistico</td>
+          <td>Olivia Olveros</td>
+          <td>Camión Bomba A</td>
+          <td>Chocaron dos autos, no hay heridos</td> 
         </tr>
       </table>
     </div>
