--- a/html/login.html
+++ b/html/login.html
@@ -35,6 +35,10 @@
     <footer class="footer-bomberos">
         <p>Numero de emergencia: 100</p>
         <p>telefono: +54 03548 42-2631</p>
+        <section> 
+          <a href="https://www.instagram.com/bomberos_lafalda/?hl=es"  target="_blank"><img class="img-container" src="./img/Instagram.PNG"></a>
+          <a href="https://www.facebook.com/people/Bomberos-Voluntarios-La-Falda/100090244821628/?locale=hi_es"  target="_blank"><img class="img-container" src="./img/facebook.png"></a>
+        </section>
     </footer>
     <footer>
         <p>&copy; 2023 Proa La Falda. Todos los derechos reservados.</p>
