--- a/html/inventario.html
+++ b/html/inventario.html
@@ -26,6 +26,7 @@
       <a style="color: rgb(196, 192, 192);" href="#">Inventario</a>
       <a href="../html/personal.html">Personal</a>
       <a href="./login.html">login</a>
+      <a href="./html/registro.html">Registro</a>
       <a href="../html/tutorial.html">Tutorial</a>
     </nav>
     <div class="contenedor">
