--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <p>Aplicación web para la administración de datos.</p>
       </div>  
     </header>
-    
+     
     <nav>
       <a  href="#" style="color: rgb(196, 192, 192)";>Inicio</a>
       <a href="./html/historialSiniestro.html">Historial de siniestros</a>
@@ -26,6 +26,7 @@
       <a href="./html/inventario.html">Inventario</a>
       <a href="./html/personal.html">Personal</a>
       <a href="./html/login.html">login</a>
+      <a href="./html/registro.html">Registro</a>
       <a href="./html/tutorial.html">Tutorial</a>
     </nav>
     <div class="contenedor">
