--- a/html/personal.html
+++ b/html/personal.html
@@ -26,6 +26,7 @@
       <a  href="../html/inventario.html">Inventario</a>
       <a style="color: rgb(196, 192, 192);" href="#">Personal</a>
       <a href="./login.html">login</a>
+      <a href="./html/registro.html">Registro</a>
       <a href="../html/tutorial.html">Tutorial</a>
     </nav>
 
