--- a/html/registro.html
+++ b/html/registro.html
@@ -5,38 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bomberos La Falda</title>
-    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/registro.css">
     <link rel="shortcut icon" href="../img/bomberos logo .png" type="image/x-icon">
 </head> 
 <body>
-  <header class="header-titulo-img">
-    <div class="div-header-img">
-      <img class="img-logo" src="../img/bomberos logo .png" width="100px" alt="XD">
-    </div>
-    <div class="div-header-titulo">
-      <h1>Bomberos La Falda - Log in </h1>
-      <p>Aplicación web para la administración de datos.</p>
-    </div>  
-  </header>
+    <header>
+      <h1>¡Bomberos La Falda! login</h1>
+      <p>Esta es una aplicación web para la administración de datos.</p>
+    </header>
      
     <nav>
-      <a href="../index.html">Inicio</a>
-      <a  href="#">Historial de siniestros</a>
-      <a href="../html/ingresarSiniestro.html">Ingresar siniestro</a>
+      <a href="./index.html">Inicio</a>
+      <a  href="./historialSiniestro.html">Historial de siniestros</a>
+      <a href="./html/ingresarSiniestro.html">Ingresar siniestro</a>
       <a href="./inventario.html">Inventario</a>
       <a href="personal.html">Personal</a>
-      <a style="color: rgb(196, 192, 192);" href="#">login</a>
-      <a href="./html/registro.html">Registro</a>
-      <a href="../html/tutorial.html">Tutorial</a>
+      <a href="./login.html">login</a>
+      <a style="color: rgb(196, 192, 192);" href="#">registro</a>
     </nav>
     <div class="contenedor">
       <div class="contenedor-login">
-        <h1>LOGIN</h1>
+        <h1>REGISTRO</h1>
         <form action="">
-          <Label class="">Gmail: </Label>
+          <Label class="">Nombre: </Label>
           <input class="input-1" type="text"><br>
+          <label class="label-2">DNI: </label>
+          <input class="input-2" type="number"><br>
+          <Label class="">Rango: </Label>
+          <input class="input-3" type="text"><br>
           <label class="label-2">password: </label>
-          <input class="input-2" type="password">
+          <input class="input-4" type="password">
+          <button>iniciar sesion</button>
         </form>
       </div>
     </div>  
