--- a/html/login.html
+++ b/html/login.html
@@ -26,7 +26,7 @@
       <a href="./inventario.html">Inventario</a>
       <a href="personal.html">Personal</a>
       <a style="color: rgb(196, 192, 192);" href="#">login</a>
-      <a href="./html/registro.html">Registro</a>
+      <a href="../html/registro.html">Registro</a>
       <a href="../html/tutorial.html">Tutorial</a>
     </nav>
     <div class="contenedor">
