--- a/html/registro.html
+++ b/html/registro.html
@@ -15,13 +15,14 @@
     </header>
      
     <nav>
-      <a href="./index.html">Inicio</a>
+      <a href="../index.html">Inicio</a>
       <a  href="./historialSiniestro.html">Historial de siniestros</a>
       <a href="./html/ingresarSiniestro.html">Ingresar siniestro</a>
       <a href="./inventario.html">Inventario</a>
       <a href="personal.html">Personal</a>
       <a href="./login.html">login</a>
       <a style="color: rgb(196, 192, 192);" href="#">registro</a>
+      <a href="../html/tutorial.html">Tutorial</a>
     </nav>
     <div class="contenedor">
       <div class="contenedor-login">
