--- a/html/tutorial.html
+++ b/html/tutorial.html
@@ -26,7 +26,7 @@
       <a href="../html/inventario.html">Inventario</a>
       <a href="../html/personal.html">Personal</a>
       <a href="./login.html">login</a>
-      <a href="./html/registro.html">Registro</a>
+      <a href="./registro.html">Registro</a>
       <a style="color: rgb(196, 192, 192);" href="#">Tutorial</a>
     </nav>
     <div class="contenedor">
