--- a/html/login.html
+++ b/html/login.html
@@ -37,6 +37,7 @@
           <input class="input-1" type="text"><br>
           <label class="label-2">password: </label>
           <input class="input-2" type="password">
+          <button>iniciar sesion</button>
         </form>
       </div>
     </div>  
