--- a/html/historialSiniestro.html
+++ b/html/historialSiniestro.html
@@ -25,7 +25,7 @@
       <a href="../html/ingresarSiniestro.html">Ingresar siniestro</a>
       <a href="./inventario.html">Inventario</a>
       <a href="personal.html">Personal</a>
-      <a href="./login.html">login</a>
+      <a href="./login.html">Login</a>
       <a href="./registro.html">Registro</a>
       <a href="../html/tutorial.html">Tutorial</a>
     </nav>
