--- a/html/login.html
+++ b/html/login.html
@@ -25,7 +25,7 @@
       <a href="../html/ingresarSiniestro.html">Ingresar siniestro</a>
       <a href="./inventario.html">Inventario</a>
       <a href="personal.html">Personal</a>
-      <a style="color: rgb(196, 192, 192);" href="#">login</a>
+      <a style="color: rgb(196, 192, 192);" href="#">Login</a>
       <a href="../html/registro.html">Registro</a>
       <a href="../html/tutorial.html">Tutorial</a>
     </nav>
