--- a/html/registro.html
+++ b/html/registro.html
@@ -20,7 +20,7 @@
       <a href="./html/ingresarSiniestro.html">Ingresar siniestro</a>
       <a href="./inventario.html">Inventario</a>
       <a href="personal.html">Personal</a>
-      <a href="./login.html">login</a>
+      <a href="./login.html">Login</a>
       <a style="color: rgb(196, 192, 192);" href="#">registro</a>
       <a href="../html/tutorial.html">Tutorial</a>
     </nav>
