--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <a href="./html/ingresarSiniestro.html">Ingresar siniestro</a>
       <a href="./html/inventario.html">Inventario</a>
       <a href="./html/personal.html">Personal</a>
-      <a href="./html/login.html">login</a>
+      <a href="./html/login.html">Login</a>
       <a href="./html/registro.html">Registro</a>
       <a href="./html/tutorial.html">Tutorial</a>
     </nav>
