--- a/html/registro.html
+++ b/html/registro.html
@@ -41,8 +41,8 @@
       </div>
     </div>  
     <footer class="footer-bomberos">
-        <p>Numero de emergencia: 100</p>
-        <p>telefono: +54 03548 42-2631</p>
+        <p>Número de emergencia: 100</p>
+        <p>Teléfono: +54 03548 42-2631</p>
     </footer>
     <footer>
         <p>&copy; 2023 Proa La Falda. Todos los derechos reservados.</p>
