--- a/html/tutorial.html
+++ b/html/tutorial.html
@@ -32,8 +32,8 @@
     <div class="contenedor">
     </div> 
     <footer class="footer-bomberos">
-      <p>Numero de emergencia: 100</p>
-      <p>telefono: +54 03548 42-2631</p>
+      <p>Número de emergencia: 100</p>
+      <p>Teléfono: +54 03548 42-2631</p>
     </footer>  
     <footer>
         <p>&copy; 2023 Proa La Falda. Todos los derechos reservados.</p>
