--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
     </div>
     <footer class="footer-bomberos">
       <div>
-        <p>Numero de emergencia: 100</p>
-        <p>telefono: +54 03548 42-2631</p>
+        <p>Número de emergencia: 100</p>
+        <p>Teléfono: +54 03548 42-2631</p>
       </div>
       
       <div>
